--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,28 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
 }
-.navigasi{
+
+.navigasi {
     background-color: gray;
     font-family: arial;
     font-size: 20px;
     font-weight: 500;
 }
-.navigasi ul{
+
+.navigasi ul {
     display: flex;
     list-style-type: none;
     justify-content: center;
     background-color: #454545;
 }
-.navigasi li{
+
+.navigasi li {
     background-color: #454545;
 }
-.navigasi a{
+
+.navigasi a {
     display: block;
     text-align: center;
     text-decoration: none;
@@ -26,18 +30,19 @@
     padding: 20px;
     gap: 30px;
     margin-left: 20px;
-    
+
 }
-.navigasi a:hover{
-    background-color: rgb(255, 255, 255) ;
+
+.navigasi a:hover {
+    background-color: rgb(255, 255, 255);
     padding: 20px;
     transition: 0.5s;
     border-radius: 40px;
     color: black;
 }
-.profil{
+
+.profil {
     margin: auto;
-    padding: auto;
     position: relative;
     background-image: url(../asset/logo_linux/blug\ logo\ black.jpg);
     background-size: cover;
@@ -47,6 +52,7 @@
     color: white;
     z-index: 1;
 }
+
 .profil::before {
     content: '';
     position: absolute;
@@ -54,28 +60,34 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(250, 189, 18, 0.50);
+    background: linear-gradient(rgba(222, 165, 75, 0.5), rgba(222, 165, 75, 0.5), rgba(222, 165, 75, 0.5), rgba(222, 165, 75, 0.5), rgba(222, 165, 75, 0.5), rgba(222, 165, 75, 0.5), #f68f21);
+    backdrop-filter: blur(5px);
     z-index: -1;
 }
-.logo-blug{
+
+.logo-blug {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.logo-blug img{
+
+.logo-blug img {
     height: 250px;
     border-radius: 50%;
 }
-.logo-blug h1{
+
+.logo-blug h1 {
     color: white;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
     font-size: 70px;
     margin-top: 40px;
+    text-shadow: 0 6px 15px rgba(0, 0, 1, 0.9);
 }
-.logo-blug button{
+
+.logo-blug button {
     width: 350px;
     height: 50px;
     border-radius: 25px;
@@ -85,31 +97,36 @@
     color: white;
     transition: 0.3s;
 }
-.logo-blug button:hover{
+
+.logo-blug button:hover {
     color: #454545;
     background-color: white;
     cursor: pointer;
 }
-.logo-blug a{
+
+.logo-blug a {
     text-decoration: none;
     color: white;
     font-size: 15px;
 }
-.about{
+
+.about {
     display: flex;
     justify-content: center;
     flex-direction: column;
     background-color: #F68E21;
 }
-.about-blug{
-}
-.about h1{
+
+.about-blug {}
+
+.about h1 {
     text-align: center;
     color: white;
     font-size: 50px;
     padding-top: 150px;
 }
-.about p{
+
+.about p {
     margin-top: 50px;
     text-align: center;
     color: white;
@@ -117,14 +134,16 @@
     margin-right: 200px;
     margin-left: 200px;
 }
-.about-blug a{
+
+.about-blug a {
     display: flex;
     justify-content: center;
     text-decoration: none;
     color: white;
     font-size: 15px;
 }
-.about-blug button{
+
+.about-blug button {
     width: 350px;
     height: 50px;
     border-radius: 25px;
@@ -134,7 +153,8 @@
     color: white;
     transition: 0.3s;
 }
-.about-blug button:hover{
+
+.about-blug button:hover {
     color: #454545;
     background-color: white;
     cursor: pointer;
