--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 .navigasi {
     background-color: gray;
     font-family: arial;
@@ -149,7 +151,7 @@
     border-radius: 25px;
     border: none;
     background-color: #454545;
-    margin-top: 50px;
+    margin-top: 90px;
     color: white;
     transition: 0.3s;
 }
@@ -158,4 +160,69 @@
     color: #454545;
     background-color: white;
     cursor: pointer;
+}
+.kelebihan{
+    background-color: #454545;
+}
+.kelebihan h1{
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    padding-top: 150px;
+    margin-bottom: 100px;
+}
+.feature-box {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+.feature {
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 30px;
+    text-align: center;
+    width: 270px;
+    border:solid 5px #F68E21;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
+.feature h3 {
+    margin-bottom: 15px;
+    font-size: 30px;
+    align-items: center;
+}
+.feature p {
+    font-size: 1rem;
+}
+.feature img {
+    width: 100%;
+}
+.anggota-kelompok{
+    background-color: #FABD12;
+    margin-top: -20px;
+}
+.anggota-kelompok h1{
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    padding-top: 150px;
+    margin-bottom: 100px;
+}
+.kabing{
+    background-color: #454545;
+    margin-top: -20px;
+}
+.kabing h1{
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    padding-top: 150px;
+    margin-bottom: 100px;
+}
+.foter{
+    background-color: black;
+    padding: 20px;  
+}
+.hak-cipta {
+    text-align: center;
+    color: white;
 }
