--- a/css/style_kelebihan.css
+++ b/css/style_kelebihan.css
@@ -42,3 +42,16 @@ html{
     border-radius: 40px;
     color: black;
 }
+body {
+    background-color: #FABD12;
+}
+h1 {
+    color: white;
+}
+.judul {
+    justify-self: center;
+    justify-items: center;
+}
+.isi{
+    margin-top: 35px;
+}
