--- a/css/style_kelebihan.css
+++ b/css/style_kelebihan.css
@@ -45,13 +45,83 @@ html{
 body {
     background-color: #FABD12;
 }
-h1 {
+.judul h1 {
     color: white;
+    font-size: 50px;
+
 }
 .judul {
     justify-self: center;
     justify-items: center;
 }
 .isi{
-    margin-top: 35px;
+    margin: 35px;
 }
+.box-all {
+    display: flex;
+    padding-left: 200px;
+    padding-right: 200px;
+    flex-direction: column;
+}
+.box1, .box2{
+    display: flex;
+    flex-direction: row;
+}
+.box {
+    background-color: white;
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    max-width: 400px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    text-align: center;
+    font-size:20px;
+}
+.box img {
+    width: 300px;
+    height: 300px;
+}
+.btn {
+    background-color: #454545;
+    display: flex;
+    justify-content: center;
+    padding-top: 0;
+    padding-bottom: 100px;
+}
+
+.wave {
+    width: 100%;
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+button {
+    width: 350px;
+    height: 50px;
+    border-radius: 25px;
+    border: none;
+    background-color: #F68E21;
+    margin-top: 90px;
+    color: white;
+    transition: 0.3s;
+}
+button:hover{
+    cursor: pointer;
+    background-color: #d77f20;
+}
+.foter{
+    background-color: black;
+    padding: 20px;  
+}
+.hak-cipta {
+    text-align: center;
+    color: white;
+}
+
+
+
+
