--- a/css/style_kelebihan.css
+++ b/css/style_kelebihan.css
@@ -48,6 +48,7 @@ body {
 .judul h1 {
     color: white;
     font-size: 50px;
+    margin-bottom: 100px;
 
 }
 .judul {
@@ -80,10 +81,15 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     text-align: center;
     font-size:20px;
+    height: 800px;
+    width: 600px;
 }
 .box img {
     width: 300px;
     height: 300px;
+}
+.box p{
+    margin: 30px;
 }
 .btn {
     background-color: #454545;
